deploy/webui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webui
  name: webui
spec:
  ports:
  - port: 80
  selector:
    app: webui
