deploy/webui/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webui
spec:
  rules:
  - host: webui.lvh.me
    http:
      paths:
      - backend:
          service:
            name: webui
            port:
              number: 80
        path: /
        pathType: Prefix
